mapeados archivos de cada ROI

--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10245,21 +10245,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Guarda todas las mascaras"
+    "## Guarda todas las mascaras y archivos de cada ROI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "#hashmap mascaras con clave numeroMascara\n",
     "mascaras = {}\n",
+    "dicom_roi_map = {}\n",
+    "\n",
+    "for r in nombres_ROI:\n",
+    "    dicom_roi_map[str(r)] = []\n",
     "\n",
     "for f in os.listdir(dir_CT):\n",
+    "    # Obtener mascaras\n",
     "    numeroMascara = f.split(\"_\")[1].split(\".\")[0]\n",
-    "    mascaras[numeroMascara] = obtenerMascara(numeroMascara, UI_Contornos)\n"
+    "    mascaras[numeroMascara] = obtenerMascara(numeroMascara, UI_Contornos)\n",
+    "\n",
+    "    # Obtener archivos de cada ROI\n",
+    "    rois_por_archivo = obtener_ROIs_y_posicion_del_Dicom(numeroMascara, UI_Contornos)[0]\n",
+    "    if (len(rois_por_archivo) > 0):\n",
+    "        for r in rois_por_archivo:\n",
+    "            if (numeroMascara not in dicom_roi_map[str(r)]):\n",
+    "                dicom_roi_map[str(r)].append(numeroMascara)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La ROI con mayor suvmax es la que tiene de nombre '3'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['165', '166', '167']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Archivos de la ROI 3\n",
+    "\n",
+    "dicom_roi_map[\"3\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tenemos que juntar estos archivos en un unico NRRD para usar en Pyradiomics y pasarla como imagePath"
    ]
   },
   {
