Combinadas imagenes en NRRD en directorio CT_ROI

--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10283,24 +10283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['165', '166', '167']"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Archivos de la ROI 3\n",
+    "ROI_con_mayor_suvmax = \"3\"\n",
     "\n",
-    "dicom_roi_map[\"3\"]"
+    "# Crear la carpeta para los archivos DICOM\n",
+    "if not os.path.exists(f'../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/'):\n",
+    "    os.makedirs(f'../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in os.listdir(dir_CT):\n",
+    "    numeroMascara = f.split(\"_\")[1].split(\".\")[0]\n",
+    "\n",
+    "    if (numeroMascara in dicom_roi_map['3']):\n",
+    "        filename = f\"DICOM_{numeroMascara}.dcm\"\n",
+    "        source_path = os.path.join(dir_CT, filename)\n",
+    "        dest_path = os.path.join(f'../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/', filename)\n",
+    "        shutil.copyfile(source_path, dest_path)"
    ]
   },
   {
@@ -10308,6 +10315,23 @@
    "metadata": {},
    "source": [
     "Tenemos que juntar estos archivos en un unico NRRD para usar en Pyradiomics y pasarla como imagePath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = sitk.ImageSeriesReader()\n",
+    "\n",
+    "dicomReader = reader.GetGDCMSeriesFileNames(f\"../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/\") #input is the DCM file path\n",
+    "\n",
+    "reader.SetFileNames(dicomReader)\n",
+    "\n",
+    "dicoms = reader.Execute()\n",
+    "\n",
+    "sitk.WriteImage(dicoms, f\"../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/NRRD.nrrd\") #fileName like \"brain.nrrd\""
    ]
   },
   {
