--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10278,6 +10278,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Pasa las imagenes CT .dcm de la ROI con mayor suvmax a .nrrd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La ROI con mayor suvmax es la que tiene de nombre '3'"
    ]
   },
@@ -10319,7 +10326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10332,6 +10339,13 @@
     "dicoms = reader.Execute()\n",
     "\n",
     "sitk.WriteImage(dicoms, f\"../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/NRRD.nrrd\") #fileName like \"brain.nrrd\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pasa la mascara CT de la ROI con mayor suvmax a .nrrd"
    ]
   },
   {
