--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10282,10 +10282,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "La ROI con mayor suvmax es la que tiene de nombre '3'"
+    "ROI_con_mayor_suvmax = \"3\""
    ]
   },
   {
@@ -10294,8 +10296,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROI_con_mayor_suvmax = \"3\"\n",
-    "\n",
     "# Crear la carpeta para los archivos DICOM\n",
     "if not os.path.exists(f'../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/'):\n",
     "    os.makedirs(f'../PacienteEjemplo/29/CT_ROI_{ROI_con_mayor_suvmax}/')"
