--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10615,7 +10615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -10627,15 +10627,13 @@
     }
    ],
    "source": [
-    "label = 1  # Cambia esto si la ROI en tu máscara está identificada por un valor diferente\n",
-    "\n",
     "# Ejecutar el extractor con la tolerancia de geometría aumentada\n",
-    "result = extractor.execute(imagePath, maskPath, label=label)\n"
+    "result = extractor.execute(imagePath, maskPath)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
