añadido todo a un dataframe

--- a/Codigo/test.ipynb
+++ b/Codigo/test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,8 @@
     "import rt_utils\n",
     "from __future__ import print_function\n",
     "import six\n",
-    "from radiomics import featureextractor"
+    "from radiomics import featureextractor\n",
+    "import warnings"
    ]
   },
   {
@@ -10617,7 +10618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -10630,12 +10631,12 @@
    ],
    "source": [
     "# Ejecutar el extractor con la tolerancia de geometría aumentada\n",
-    "result = extractor.execute(imagePath, maskPath)"
+    "result_pyradiomics = extractor.execute(imagePath, maskPath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -10778,11 +10779,274 @@
     }
    ],
    "source": [
-    "print('Result type:', type(result))  # result is returned in a Python ordered dictionary\n",
+    "print('Result type:', type(result_pyradiomics))  # result is returned in a Python ordered dictionary\n",
     "print('')\n",
     "print('Calculated features')\n",
-    "for key, value in six.iteritems(result):\n",
+    "for key, value in six.iteritems(result_pyradiomics):\n",
     "    print('\\t', key, ':', value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Se guarda en un dataframe de pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se crea el dataframe y se inicializa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ROI con mayor SUVmax</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Paciente</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ROI con mayor SUVmax\n",
+       "Paciente                     \n",
+       "29                          3"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.DataFrame()\n",
+    "\n",
+    "data['Paciente'] = [paciente]\n",
+    "data = data.set_index('Paciente')\n",
+    "\n",
+    "data['ROI con mayor SUVmax'] = [ROI_con_mayor_suvmax]\n",
+    "\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se añaden los datos de pyradiomics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ROI con mayor SUVmax</th>\n",
+       "      <th>diagnostics_Image-original_Mean</th>\n",
+       "      <th>diagnostics_Image-original_Minimum</th>\n",
+       "      <th>diagnostics_Image-original_Maximum</th>\n",
+       "      <th>diagnostics_Mask-original_Hash</th>\n",
+       "      <th>diagnostics_Mask-original_Spacing</th>\n",
+       "      <th>diagnostics_Mask-original_Size</th>\n",
+       "      <th>diagnostics_Mask-original_BoundingBox</th>\n",
+       "      <th>diagnostics_Mask-original_VoxelNum</th>\n",
+       "      <th>diagnostics_Mask-original_VolumeNum</th>\n",
+       "      <th>...</th>\n",
+       "      <th>original_glszm_SmallAreaHighGrayLevelEmphasis</th>\n",
+       "      <th>original_glszm_SmallAreaLowGrayLevelEmphasis</th>\n",
+       "      <th>original_glszm_ZoneEntropy</th>\n",
+       "      <th>original_glszm_ZonePercentage</th>\n",
+       "      <th>original_glszm_ZoneVariance</th>\n",
+       "      <th>original_ngtdm_Busyness</th>\n",
+       "      <th>original_ngtdm_Coarseness</th>\n",
+       "      <th>original_ngtdm_Complexity</th>\n",
+       "      <th>original_ngtdm_Contrast</th>\n",
+       "      <th>original_ngtdm_Strength</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Paciente</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-683.767839</td>\n",
+       "      <td>-1024.0</td>\n",
+       "      <td>1284.0</td>\n",
+       "      <td>60b73aac7c2efa6ff510a19e79c7bca7bcc6aa30</td>\n",
+       "      <td>(0.9765625, 0.9765625, 2.5)</td>\n",
+       "      <td>(512, 512, 3)</td>\n",
+       "      <td>(223, 331, 0, 9, 11, 3)</td>\n",
+       "      <td>181</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.19730099780581</td>\n",
+       "      <td>0.019789190550743272</td>\n",
+       "      <td>4.411768795973186</td>\n",
+       "      <td>0.22099447513812154</td>\n",
+       "      <td>54.79937500000001</td>\n",
+       "      <td>0.24978544889404902</td>\n",
+       "      <td>0.050772272540470315</td>\n",
+       "      <td>82.96450345873181</td>\n",
+       "      <td>0.07296291905482843</td>\n",
+       "      <td>4.044353162749345</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 119 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         ROI con mayor SUVmax  diagnostics_Image-original_Mean  \\\n",
+       "Paciente                                                         \n",
+       "29                          3                      -683.767839   \n",
+       "\n",
+       "          diagnostics_Image-original_Minimum  \\\n",
+       "Paciente                                       \n",
+       "29                                   -1024.0   \n",
+       "\n",
+       "          diagnostics_Image-original_Maximum  \\\n",
+       "Paciente                                       \n",
+       "29                                    1284.0   \n",
+       "\n",
+       "                    diagnostics_Mask-original_Hash  \\\n",
+       "Paciente                                             \n",
+       "29        60b73aac7c2efa6ff510a19e79c7bca7bcc6aa30   \n",
+       "\n",
+       "         diagnostics_Mask-original_Spacing diagnostics_Mask-original_Size  \\\n",
+       "Paciente                                                                    \n",
+       "29             (0.9765625, 0.9765625, 2.5)                  (512, 512, 3)   \n",
+       "\n",
+       "         diagnostics_Mask-original_BoundingBox  \\\n",
+       "Paciente                                         \n",
+       "29                     (223, 331, 0, 9, 11, 3)   \n",
+       "\n",
+       "          diagnostics_Mask-original_VoxelNum  \\\n",
+       "Paciente                                       \n",
+       "29                                       181   \n",
+       "\n",
+       "          diagnostics_Mask-original_VolumeNum  ...  \\\n",
+       "Paciente                                       ...   \n",
+       "29                                          1  ...   \n",
+       "\n",
+       "         original_glszm_SmallAreaHighGrayLevelEmphasis  \\\n",
+       "Paciente                                                 \n",
+       "29                                   35.19730099780581   \n",
+       "\n",
+       "         original_glszm_SmallAreaLowGrayLevelEmphasis  \\\n",
+       "Paciente                                                \n",
+       "29                               0.019789190550743272   \n",
+       "\n",
+       "          original_glszm_ZoneEntropy  original_glszm_ZonePercentage  \\\n",
+       "Paciente                                                              \n",
+       "29                 4.411768795973186            0.22099447513812154   \n",
+       "\n",
+       "          original_glszm_ZoneVariance  original_ngtdm_Busyness  \\\n",
+       "Paciente                                                         \n",
+       "29                  54.79937500000001      0.24978544889404902   \n",
+       "\n",
+       "         original_ngtdm_Coarseness original_ngtdm_Complexity  \\\n",
+       "Paciente                                                       \n",
+       "29            0.050772272540470315         82.96450345873181   \n",
+       "\n",
+       "         original_ngtdm_Contrast original_ngtdm_Strength  \n",
+       "Paciente                                                  \n",
+       "29           0.07296291905482843       4.044353162749345  \n",
+       "\n",
+       "[1 rows x 119 columns]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "for i, (key, value) in enumerate(result_pyradiomics.items()):\n",
+    "    if i > 10 :\n",
+    "        data[key] = [value]\n",
+    "\n",
+    "data"
    ]
   },
   {
