arreglado peso y altura

--- a/Codigo/distancias.ipynb
+++ b/Codigo/distancias.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Paciente import Paciente"
+    "from Paciente import Paciente\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,13 +26,301 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:19<00:00, 17.72it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:18<00:00, 18.93it/s]\n"
      ]
     }
    ],
    "source": [
     "# Se instancia la clase para el paciente numero 29\n",
     "paciente29 = Paciente(29, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paciente29.altura"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paciente29.peso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pat_height = paciente29.altura\n",
+    "pat_weight = pat_meta.PatientWeight #kg\n",
+    "pat_BSA = np.sqrt((pat_height*pat_weight)/3600) #m^2? \n",
+    "\n",
+    "#%% Determine Spacing, Labels, Segmentation and Centroids\n",
+    "\n",
+    "# Get Pixel Spacing from Dicom Metadata \n",
+    "reader = sitk.ImageSeriesReader()\n",
+    "dicom_names = reader.GetGDCMSeriesFileNames(PET_path)\n",
+    "reader.SetFileNames(dicom_names)\n",
+    "image = reader.Execute()\n",
+    "\n",
+    "spacing = np.flip(np.asarray(image.GetSpacing()))\n",
+    "\n",
+    "# Separate the different lesions and give them different labels\n",
+    "# Not connected regions will be seen as different objects \n",
+    "labeled_data, num_features = label(data)\n",
+    "print('Number of lesions detected: ' + str(num_features))\n",
+    "nrrd.write(results_dir + '/labeled_lesions.nrrd', labeled_data, index_order = 'C') \n",
+    "\n",
+    "# Select only the segmented data points (nonzero points)\n",
+    "seg = np.argwhere(labeled_data)\n",
+    "\n",
+    "# Calculate centroids/centers of mass for the different lesions which are \n",
+    "# represented as different objects/features in the labeled data array\n",
+    "centr = np.asarray(center_of_mass(data, labels = labeled_data,\n",
+    "                                  index = list(range(1, num_features+1))))\n",
+    "    \n",
+    "#%% Define functions (for weighted distances in general, distances on a given array,\n",
+    "# distances between one given point and all the others)\n",
+    "\n",
+    "# Function for weighted distances\n",
+    "def weighted_distance(p1, p2, weights, type_of_distance):\n",
+    "    '''\n",
+    "    The function calculates the weighted distance between two points. \n",
+    "    The type of distance can be selected. \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    p1 : array_like\n",
+    "        Coordinates of the first point. \n",
+    "    \n",
+    "    p2 : array_like\n",
+    "        Coordinates of the second point. \n",
+    "    \n",
+    "    weights : array_like \n",
+    "        Array which contains the parameters which should be used as weights to \n",
+    "        calculate the weighted distance. Should be of the same length as there are\n",
+    "        dimensions in the data points. In case of images, these weights equal \n",
+    "        the spacing of the image data in the different dimensions.\n",
+    "            \n",
+    "    type_of_distance : str \n",
+    "        Type of distance to be calculated: 'euclidian', 'manhattan' or 'cityblock',\n",
+    "        or 'chebyshev'.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Distance between the two points p1 and p2.\n",
+    "\n",
+    "    '''\n",
+    "    # First: Check if enough weight parameters are given. Follow through with \n",
+    "    # the code if this is the case. If not, raise Exception and print statement. \n",
+    "    try: \n",
+    "        len(weights) == len(p1) == len(p2)\n",
+    "    except: \n",
+    "        print('Error: Dimension mismatch between data points and weight array') \n",
+    "    else: \n",
+    "        # For every type of distance there is a formula for a weighted distance\n",
+    "        # which will be executed if the corresponding type is selected. \n",
+    "        \n",
+    "        q = p1 - p2 \n",
+    "        \n",
+    "        if type_of_distance == 'euclidian':\n",
+    "            # Weighted Euclidian distance\n",
+    "            return np.sqrt(((weights * q)**2).sum())\n",
+    "        \n",
+    "        elif type_of_distance == 'manhattan' or type_of_distance == 'cityblock':\n",
+    "            # Weighted Manhattan or Cityblock distance \n",
+    "            return (weights * abs(q)).sum()\n",
+    "            \n",
+    "        elif type_of_distance == 'chebyshev':\n",
+    "            # Weighted Chebyshev distance \n",
+    "            return max(weights * abs(q))\n",
+    "            \n",
+    "        else: \n",
+    "            # If a different string than the possible distance types is given, \n",
+    "            # the following statement is printed. \n",
+    "            print(\"Error: The selected distance type is not available. \\\n",
+    "                  Try 'euclidian', 'manhattan' or 'cityblock', or 'chebyshev'.\")\n",
+    "\n",
+    "\n",
+    "# Define function which calculates weighted distances (all three types) on a \n",
+    "# given array (segmentation, either whole body lesions or only centroids)\n",
+    "def distances(segmentation, weights):\n",
+    "    '''\n",
+    "    The function calculates the distances between all pairs of data points \n",
+    "    given by the segmentation array.\n",
+    "    The distances are returned in an array (nx3) as well. \n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    segmentation : array_like\n",
+    "        Segmented image data, either whole lesions or only centroids.\n",
+    "        Depending on the type of segmentation, one of the two following distances\n",
+    "        is calculated: \n",
+    "            \n",
+    "            (a) Distances between all pairs of voxels, regardless of which \n",
+    "            lesion they belong to. The segmentation should therefore contain \n",
+    "            the whole lesion volume. \n",
+    "            (b) Distances between pairs of centroids. The segmentation should \n",
+    "            contain only centroids. \n",
+    "    \n",
+    "    weights : array_like \n",
+    "        Array which contains the parameters which should be used as weights to \n",
+    "        calculate the weighted distance. Should be of the same length as there are\n",
+    "        dimensions in the data points. In case of images, these weights equal \n",
+    "        the spacing of the image data in the different dimensions.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Three arrays of length n, containing the calculated distances. Each array \n",
+    "    contains a different type of distance, n being the number of pairs of points.\n",
+    "    One array containing the indices of data points in seg, for the centroids, \n",
+    "    this represents the index of the lesion. \n",
+    "    \n",
+    "    '''\n",
+    "    euc_dist = [weighted_distance(segmentation[i], segmentation[j], weights, 'euclidian')\n",
+    "                for i in range(len(segmentation)) for j in range(len(segmentation)) if i != j]\n",
+    "    man_dist = [weighted_distance(segmentation[i], segmentation[j], weights, 'manhattan')\n",
+    "                for i in range(len(segmentation)) for j in range(len(segmentation)) if i != j]\n",
+    "    che_dist = [weighted_distance(segmentation[i], segmentation[j], weights, 'chebyshev')\n",
+    "                for i in range(len(segmentation)) for j in range(len(segmentation)) if i != j]\n",
+    "    index_i = [i for i in range(len(segmentation)) for j in range(len(segmentation)) if i != j]\n",
+    " \n",
+    "    return euc_dist, man_dist, che_dist, index_i\n",
+    "\n",
+    "# Function that gives back all the euclidian distances between one specific \n",
+    "# lesion and all the others \n",
+    "def lesion_distances(index): \n",
+    "    '''\n",
+    "    Function that gives back all the euclidian distances between one specific\n",
+    "    lesion and all the others.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    index : int\n",
+    "        Python index of the specific lesion that should be the 'central' lesion.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Array of distances from one specific lesion.\n",
+    "\n",
+    "    '''\n",
+    "    # Give back the array of euclidian distances between one specific lesion and the others\n",
+    "    d = dist_ctr[0, np.where(dist_ctr[3] == index)[0]]\n",
+    "    \n",
+    "    return d\n",
+    "    \n",
+    "#%% Apply functions to data \n",
+    "    # IF NECESSARY COMMENT OUT THE PART FOR THE DISTANCES BETWEEN VOXEL PAIRS\n",
+    "    \n",
+    "# Distances between all pairs of voxels are calculated \n",
+    "euc_dist_vox, man_dist_vox, che_dist_vox, index_i_vox = distances(seg, spacing)\n",
+    "dist_vox = np.array([euc_dist_vox, man_dist_vox, che_dist_vox])\n",
+    "np.savetxt(results_dir + '/distances_vox.csv', dist_vox, delimiter = ',') \n",
+    "\n",
+    "# Distances between all pairs of centroids are calculated \n",
+    "euc_dist_ctr, man_dist_ctr, che_dist_ctr, index_i_ctr = distances(centr, spacing)\n",
+    "dist_ctr = np.array([euc_dist_ctr, man_dist_ctr, che_dist_ctr, index_i_ctr])\n",
+    "np.savetxt(results_dir + '/distances_ctr.csv', dist_ctr, delimiter = ',') \n",
+    "\n",
+    "#%% Calculate parameters\n",
+    "\n",
+    "# Calculation of parameters, based on the voxel distances\n",
+    "# Dmax: Max. distance between the two voxels that are the farthest away.\n",
+    "Dmax = max(euc_dist_vox)\n",
+    "\n",
+    "# SDmax_euc_vox: Max. euclidian distance, normalized by BSA.\n",
+    "SDmax_euc_vox = Dmax/pat_BSA\n",
+    "\n",
+    "# SDmax_man_vox: Max. Manhattan distance, normalized by BSA.\n",
+    "SDmax_man_vox = max(man_dist_vox)/pat_BSA\n",
+    "\n",
+    "# SDmax_che_vox: Max. Chebyshev distance, normalized by BSA.\n",
+    "SDmax_che_vox = max(che_dist_vox)/pat_BSA\n",
+    "\n",
+    "\n",
+    "# Calculation of parameters, based on centroid distances \n",
+    "# Dmax_patient: (Euclidian) Distance between the two lesions that are the farthest away from each other. \n",
+    "Dmax_patient = max(euc_dist_ctr)\n",
+    "\n",
+    "# Dmax_bulk: (Euclidian) Distance between the largest lesion and the one the farthest away from it. \n",
+    "# Find largest lesion first \n",
+    "sizes_of_lesions = [sum(data, labeled_data, index = i)\n",
+    "                    for i in range(1, num_features+1)]\n",
+    "largest_size = max(sizes_of_lesions) # how many pixels does the largest lesion have?\n",
+    "largest_index = np.where(sizes_of_lesions == largest_size)[0][0] # which Python Index does the largest lesion have?\n",
+    "largest_label = largest_index + 1 # which Label does the largest lesion have?  \n",
+    "#print('The largest lesion has label index ' + str(largest_label))\n",
+    "# Calculate the parameter\n",
+    "Dmax_bulk = max(lesion_distances(largest_index))\n",
+    "   \n",
+    "# SPREAD_bulk: Sum of the euclidian distances between the largest lesion and all the other lesions.\n",
+    "Spread_bulk = np.sum(lesion_distances(largest_index))\n",
+    "\n",
+    "# SPREAD_patient: Over all lesions, the maximum of the sum of distances from one lesion to all the others.\n",
+    "sums = [np.sum(lesion_distances(i)) for i in range(num_features)]\n",
+    "Spread_patient = max(sums)\n",
+    "  \n",
+    "# SDmax_euc: Dmax_patient, normalized by BSA\n",
+    "SDmax_euc = Dmax_patient/pat_BSA\n",
+    "\n",
+    "# SDmax_man: Maximum Manhattan distance between lesions, normalized by BSA. \n",
+    "SDmax_man = max(man_dist_ctr)/pat_BSA\n",
+    "\n",
+    "# SDmax_che: Maximum Chebyshev distance between lesions, normalized by BSA. \n",
+    "SDmax_che = max(che_dist_ctr)/pat_BSA\n",
+    "\n",
+    "#%% Add important features to Results file (output)\n",
+    "pat_features = pat_features.assign(Height = [pat_height],\n",
+    "                                   Weight = [pat_weight], \n",
+    "                                   BSA = [pat_BSA],\n",
+    "                                   Dmax = [Dmax], \n",
+    "                                   SDmax_euc_vox = [SDmax_euc_vox],\n",
+    "                                   SDmax_man_vox = [SDmax_man_vox], \n",
+    "                                   SDmax_che_vox = [SDmax_che_vox], \n",
+    "                                   Dmax_patient = [Dmax_patient], \n",
+    "                                   Dmax_bulk = [Dmax_bulk], \n",
+    "                                   Spread_bulk = [Spread_bulk],\n",
+    "                                   Spread_patient = [Spread_patient],\n",
+    "                                   SDmax_euc =[SDmax_euc],\n",
+    "                                   SDmax_man = [SDmax_man],\n",
+    "                                   SDmax_che = [SDmax_che])\n",
+    "\n",
+    "pat_features.to_excel(results_dir + '/Results_Patient.xlsx')\n",
+    "\n",
+    "t1 = time.time()\n",
+    "total = t1-t0\n",
+    "print('Patient ' + pat + ' successfully added.')\n",
+    "print('Total time calculating distances for patient ' + pat + ': ' + str(total) + 's')"
    ]
   }
  ],
