Hecho hasta clase label

--- a/Codigo/distancias.ipynb
+++ b/Codigo/distancias.ipynb
@@ -6,13 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Paciente import Paciente\n",
-    "import numpy as np"
+    "from Paciente import Paciente"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.ndimage import label, center_of_mass, sum  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Construyendo Mascaras: 100%|██████████| 348/348 [00:18<00:00, 18.93it/s]\n"
+      "Construyendo Mascaras: 100%|██████████| 348/348 [00:16<00:00, 21.32it/s]\n"
      ]
     }
    ],
@@ -37,42 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "169.0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lesions detected: 19\n"
+     ]
     }
    ],
    "source": [
-    "paciente29.altura"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "72.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "paciente29.peso"
+    "pat_height = paciente29.altura\n",
+    "pat_weight = paciente29.peso\n",
+    "spacing = paciente29.spacing\n",
+    "data = paciente29.mascaraGeneral\n",
+    "\n",
+    "pat_BSA = np.sqrt((pat_height*pat_weight)/3600) #m^2? \n",
+    "\n",
+    "# Separate the different lesions and give them different labels\n",
+    "# Not connected regions will be seen as different objects \n",
+    "labeled_data, num_features = label(data)\n",
+    "print('Number of lesions detected: ' + str(num_features))"
    ]
   },
   {
@@ -81,26 +77,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pat_height = paciente29.altura\n",
-    "pat_weight = pat_meta.PatientWeight #kg\n",
-    "pat_BSA = np.sqrt((pat_height*pat_weight)/3600) #m^2? \n",
-    "\n",
-    "#%% Determine Spacing, Labels, Segmentation and Centroids\n",
-    "\n",
-    "# Get Pixel Spacing from Dicom Metadata \n",
-    "reader = sitk.ImageSeriesReader()\n",
-    "dicom_names = reader.GetGDCMSeriesFileNames(PET_path)\n",
-    "reader.SetFileNames(dicom_names)\n",
-    "image = reader.Execute()\n",
-    "\n",
-    "spacing = np.flip(np.asarray(image.GetSpacing()))\n",
-    "\n",
-    "# Separate the different lesions and give them different labels\n",
-    "# Not connected regions will be seen as different objects \n",
-    "labeled_data, num_features = label(data)\n",
-    "print('Number of lesions detected: ' + str(num_features))\n",
-    "nrrd.write(results_dir + '/labeled_lesions.nrrd', labeled_data, index_order = 'C') \n",
-    "\n",
     "# Select only the segmented data points (nonzero points)\n",
     "seg = np.argwhere(labeled_data)\n",
     "\n",
